fix hero height on small screens

--- a/app/components/Hero.module.scss
+++ b/app/components/Hero.module.scss
@@ -13,7 +13,7 @@
     position: relative;
     width: 100%;
     overflow: hidden;
-    min-height: max(100vh, 640px);
+    min-height: max(100svh, 640px);
 
     h1 {
         text-wrap: balance;
